<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color">

        <ScrollView
            android:id="@+id/mine_fragment_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <cn.xiaobaihome.xiaobaihelper.widget.StatusBarHeightView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_bg_color" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/mine"
                    android:textColor="@color/main_text_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="600dp">

                    <Button
                        android:id="@+id/fragment_mine_btn_login"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="250dp"
                        android:background="@drawable/bg_btn_login"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="300dp"
                        android:gravity="center"
                        android:text="@string/login_tip"
                        android:textColor="@color/main_text_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/mine_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarHeight"
            android:background="@color/main_bg_color"
            android:gravity="center"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/mine_fragment_statusBarView" />

        <cn.xiaobaihome.xiaobaihelper.widget.StatusBarHeightView
            android:id="@+id/mine_fragment_statusBarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_bg_color"
            app:layout_constraintTop_toTopOf="parent"
            app:use_type="use_padding_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="vm"
            type="cn.xiaobaihome.xiaobaihelper.mvvm.view.fragment.mine.viewmodel.MineViewModel" />

        <variable
            name="presenter"
            type="cn.xiaobaihome.xiaobaihelper.base.Presenter" />
    </data>
</layout>