<?xml version="1.0" encoding="utf-8"?>
<!--<layout >-->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color">

        <ScrollView
            android:id="@+id/video_fragment_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <cn.xiaobaihome.xiaobaihelper.ui.widget.StatusBarHeightView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_bg_color" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/actionBarHeight"
                    android:gravity="center_vertical"
                    android:text="@string/video"
                    android:textColor="@color/main_text_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/vip_area" />

                <GridView
                    android:id="@+id/video_fragment_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="4"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:verticalSpacing="10dp"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center|start"
                    android:text="@string/video_history"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <cn.xiaobaihome.xiaobaihelper.ui.widget.AutoHeightListView
                    android:id="@+id/video_fragment_history_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/transparent"
                    android:dividerHeight="0dp"/>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/video_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarHeight"
            android:background="@color/main_bg_color"
            android:gravity="center"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/video_fragment_statusBarView" />

        <cn.xiaobaihome.xiaobaihelper.ui.widget.StatusBarHeightView
            android:id="@+id/video_fragment_statusBarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_bg_color"
            app:layout_constraintTop_toTopOf="parent"
            app:use_type="use_padding_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <data>-->

<!--        <variable-->
<!--            name="vm"-->
<!--            type="cn.xiaobaihome.xiaobaihelper.mvvm.view.fragment.video.viewmodel.VideoViewModel" />-->

<!--        <variable-->
<!--            name="presenter"-->
<!--            type="cn.xiaobaihome.xiaobaihelper.base.Presenter" />-->
<!--    </data>-->
<!--</layout>-->